adicionei um novo paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,5 +12,9 @@
          Eius culpa optio, commodi deleniti aliquam sapiente quisquam architecto tempore molestiae, 
          a fugiat voluptates soluta consequatur quis debitis.
           Impedit voluptatibus sit fugit?</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit nemo pariatur tempora 
+              dolore libero est praesentium fugit odio amet magni, 
+              laboriosam voluptatibus perferendis aliquid minus, id quibusdam! 
+              Explicabo, iure maiores!</p>
 </body>
 </html>
